[package]
name = "full-dataset-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduled-thread-pool = "0.2.6"
chrono = "0.4.22"
parking_lot = "0.12.1"

reqwest = {version = "0.11.12", features = ["blocking"], optional = true}
aws-sdk-s3 = { version = "0.21.0", optional = true}
#google-cloud-storage = { version = "0.5.1", optional = true }
octocrab = { version = "0.17.0", optional = true }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = ["github"]
http = ["reqwest"]
s3 = ["aws-sdk-s3", "tokio"]
#gcs = ["google-cloud-storage", "tokio"]
github = ["octocrab", "tokio"]