[package]
name = "mirror-cache-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
mirror-cache-core = { path = "../core" }

scheduled-thread-pool = "0.2.7"
chrono = "0.4.26"
parking_lot = "0.12.1"

reqwest = { version = "0.11.18", features = ["blocking"], optional = true }
aws-sdk-s3 = { version = "0.28.0", optional = true }
aws-smithy-http = { version = "0.55.3", optional = true }
octocrab = { version = "0.25.1", optional = true }
tokio = { version = "1.28.2", features = ["rt-multi-thread"], optional = true }

[features]
default = []
github = ["octocrab", "tokio"]
http = ["reqwest"]
s3 = ["aws-sdk-s3", "aws-smithy-http", "tokio"]
